--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.minidev</groupId>
-            <artifactId>json-smart</artifactId>
-            <version>2.2</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -35,20 +30,9 @@
             <version>1.7.13</version>
         </dependency>
         <dependency>
-            <groupId>net.minidev</groupId>
-            <artifactId>asm</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>${hadoop.core.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -135,6 +119,12 @@
                 </executions>
                 <configuration>
                     <finalName>uber-${artifactId}-${version}</finalName>
+		            <relocations>
+		              <relocation>
+		                <pattern>net.minidev.json</pattern>
+		                <shadedPattern>net.shaded.minidev.json</shadedPattern>
+		              </relocation>
+		            </relocations>
                 </configuration>
             </plugin>
         </plugins>
@@ -146,8 +136,7 @@
         <maven.compile.encoding>UTF-8</maven.compile.encoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.7</java.version>
-        <hadoop.core.version>2.6.0-mr1-cdh5.5.0</hadoop.core.version>
-        <hadoop.common.version>2.6.0-cdh5.5.0</hadoop.common.version>
-        <hive.exec.version>[2.1.2,)</hive.exec.version>
+        <hadoop.common.version>2.8.5</hadoop.common.version>
+        <hive.exec.version>1.2.7.4.1910031932</hive.exec.version>
     </properties>
 </project>
