--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.7</java.version>
         <hadoop.common.version>2.8.5</hadoop.common.version>
-        <hive.exec.version>1.2.7.4.1910031932</hive.exec.version>
+        <hive.exec.version>1.2.2</hive.exec.version>
     </properties>
 </project>
